@@ -1,20 +1,24 @@
 package wealthguard.service.impl;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
-
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.isNull;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import wealthguard.dto.TransaccionRequestDTO;
@@ -22,457 +26,389 @@ import wealthguard.dto.TransaccionResponseDTO;
 import wealthguard.entity.CategoriaEntity;
 import wealthguard.entity.ObjetivoEntity;
 import wealthguard.entity.TransaccionEntity;
-import wealthguard.entity.UsuarioEntity;
 import wealthguard.mapper.TransaccionMapper;
 import wealthguard.repository.CategoriaRepository;
 import wealthguard.repository.ObjetivoRepository;
 import wealthguard.repository.TransaccionRepository;
-import wealthguard.service.LoginService;
 
 @ExtendWith(MockitoExtension.class)
 class TransaccionServiceImplTest {
 
-    @Mock
-    private TransaccionRepository transaccionRepository;
-
-    @Mock
-    private ObjetivoRepository objetivoRepository;
-
-    @Mock
-    private TransaccionMapper transaccionMapper;
-
-    @Mock
-    private CategoriaRepository categoriaRepository;
-
-    @Mock
-    private LoginService loginService;
+    @Mock private TransaccionRepository transaccionRepository;
+    @Mock private ObjetivoRepository objetivoRepository;
+    @Mock private CategoriaRepository categoriaRepository;
+    @Mock private TransaccionMapper transaccionMapper;
 
     @InjectMocks
     private TransaccionServiceImpl transaccionService;
 
     private TransaccionEntity transaccionReciente;
     private TransaccionEntity transaccionAntigua;
-    private TransaccionResponseDTO transaccionResponseDTO;
-    private CategoriaEntity categoriaEntity;
-    private UsuarioEntity usuarioEntity;
+    private TransaccionResponseDTO transaccionDTO;
 
     @BeforeEach
     void setUp() {
-        categoriaEntity = new CategoriaEntity();
-        categoriaEntity.setId(1);
-        categoriaEntity.setNombre("Alimentación");
-
-        usuarioEntity = new UsuarioEntity();
-        usuarioEntity.setId(1);
+        CategoriaEntity categoria = new CategoriaEntity();
+        categoria.setId(1);
+        categoria.setNombre("Alimentación");
 
         transaccionReciente = new TransaccionEntity();
         transaccionReciente.setId(1);
-        transaccionReciente.setUsuario(usuarioEntity);
-        transaccionReciente.setCategoria(categoriaEntity);
-        transaccionReciente.setCantidad(100.0);
         transaccionReciente.setFecha(LocalDateTime.now().minusDays(5));
-        transaccionReciente.setTipoTransaccion(false);
+        transaccionReciente.setCantidad(100.0);
+        transaccionReciente.setTipoTransaccion(false); // gasto
+        transaccionReciente.setCategoria(categoria);
 
         transaccionAntigua = new TransaccionEntity();
         transaccionAntigua.setId(2);
-        transaccionAntigua.setUsuario(usuarioEntity);
-        transaccionAntigua.setCategoria(categoriaEntity);
-        transaccionAntigua.setCantidad(200.0);
-        transaccionAntigua.setFecha(LocalDateTime.now().minusMonths(5));
-        transaccionAntigua.setTipoTransaccion(false);
+        transaccionAntigua.setFecha(LocalDateTime.now().minusMonths(4)); // más de 3 meses
+        transaccionAntigua.setCantidad(50.0);
+        transaccionAntigua.setCategoria(categoria);
 
-        transaccionResponseDTO = new TransaccionResponseDTO();
-        transaccionResponseDTO.setId(1);
-        transaccionResponseDTO.setCantidad(100.0);
+        transaccionDTO = new TransaccionResponseDTO();
     }
 
-    // --- listarTransacciones ---
+    // ─── listarTransacciones ──────────────────────────────────────────────────
 
     @Test
-    void listarTransacciones_conFechas_retornaLista() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-        LocalDateTime inicio = LocalDateTime.now().minusDays(7);
-        LocalDateTime fin = LocalDateTime.now();
+    @DisplayName("listarTransacciones: sin fechas — aplica rango de últimos 7 días por defecto")
+    void listarTransacciones_sinFechas_aplicaRangoPorDefecto() {
+        when(transaccionRepository.buscarConFiltros(eq(1), any(), any(), isNull(), isNull(), isNull(), isNull()))
+                .thenReturn(List.of(transaccionReciente));
+        when(transaccionMapper.convertirADTO(transaccionReciente)).thenReturn(transaccionDTO);
 
-        when(transaccionRepository.buscarConFiltros(eq(1), eq(inicio), eq(fin), isNull(), isNull(), isNull(), isNull()))
-                .thenReturn(Arrays.asList(transaccionReciente));
-        when(transaccionMapper.convertirADTO(transaccionReciente)).thenReturn(transaccionResponseDTO);
+        List<TransaccionResponseDTO> resultado = transaccionService.listarTransacciones(
+                1, null, null, null, null, null, null);
 
-        List<TransaccionResponseDTO> result = transaccionService.listarTransacciones(
-                1, inicio, fin, null, null, null, null, "testuser", "pass");
-
-        assertNotNull(result);
-        assertEquals(1, result.size());
+        assertThat(resultado).hasSize(1);
+        verify(transaccionRepository).buscarConFiltros(eq(1), any(), any(), isNull(), isNull(), isNull(), isNull());
     }
 
     @Test
-    void listarTransacciones_sinFechas_usaUltimos7Dias() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-        when(transaccionRepository.buscarConFiltros(anyInt(), any(), any(), isNull(), isNull(), isNull(), isNull()))
-                .thenReturn(Collections.emptyList());
-
-        List<TransaccionResponseDTO> result = transaccionService.listarTransacciones(
-                1, null, null, null, null, null, null, "testuser", "pass");
-
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-        verify(transaccionRepository).buscarConFiltros(
-                eq(1),
-                argThat(f -> f.isBefore(LocalDateTime.now().minusDays(6))),
-                argThat(f -> f.isBefore(LocalDateTime.now().plusSeconds(1))),
-                isNull(), isNull(), isNull(), isNull());
-    }
-
-    @Test
-    void listarTransacciones_conFiltros_pasaFiltrosAlRepositorio() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
+    @DisplayName("listarTransacciones: con fechas explícitas — las pasa tal cual al repositorio")
+    void listarTransacciones_conFechas_pasaFechasAlRepositorio() {
         LocalDateTime inicio = LocalDateTime.now().minusDays(30);
         LocalDateTime fin = LocalDateTime.now();
 
-        when(transaccionRepository.buscarConFiltros(eq(1), eq(inicio), eq(fin), eq(1), eq(false), eq(50.0), eq("mercado")))
-                .thenReturn(Arrays.asList(transaccionReciente));
-        when(transaccionMapper.convertirADTO(transaccionReciente)).thenReturn(transaccionResponseDTO);
+        when(transaccionRepository.buscarConFiltros(eq(1), eq(inicio), eq(fin), isNull(), isNull(), isNull(), isNull()))
+                .thenReturn(Collections.emptyList());
 
-        List<TransaccionResponseDTO> result = transaccionService.listarTransacciones(
-                1, inicio, fin, 1, false, 50.0, "mercado", "testuser", "pass");
+        List<TransaccionResponseDTO> resultado = transaccionService.listarTransacciones(
+                1, inicio, fin, null, null, null, null);
 
-        assertEquals(1, result.size());
+        assertThat(resultado).isEmpty();
     }
 
-    // --- crearTransaccion ---
+    // ─── crearTransaccion ─────────────────────────────────────────────────────
 
     @Test
-    void crearTransaccion_sinCategoria_guardaYRetornaDTO() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
+    @DisplayName("crearTransaccion: categoría válida — guarda y devuelve DTO")
+    void crearTransaccion_categoriaValida_guardaYdevuelveDTO() {
         TransaccionRequestDTO requestDTO = new TransaccionRequestDTO();
-        requestDTO.setCantidad(150.0);
-        requestDTO.setFecha(LocalDateTime.now());
-        requestDTO.setTipoTransaccion(true);
+        CategoriaEntity categoria = new CategoriaEntity();
+        categoria.setId(1);
+        transaccionReciente.setCategoria(categoria);
 
-        TransaccionEntity entity = new TransaccionEntity();
-        entity.setCantidad(150.0);
-        entity.setCategoria(null);
+        when(transaccionMapper.convertirAEntity(requestDTO)).thenReturn(transaccionReciente);
+        when(categoriaRepository.findById(1)).thenReturn(Optional.of(categoria));
+        when(transaccionRepository.save(transaccionReciente)).thenReturn(transaccionReciente);
+        when(transaccionMapper.convertirADTO(transaccionReciente)).thenReturn(transaccionDTO);
 
-        when(transaccionMapper.convertirAEntity(requestDTO)).thenReturn(entity);
-        when(transaccionRepository.save(entity)).thenReturn(entity);
-        when(transaccionMapper.convertirADTO(entity)).thenReturn(transaccionResponseDTO);
+        TransaccionResponseDTO resultado = transaccionService.crearTransaccion(requestDTO);
 
-        TransaccionResponseDTO result = transaccionService.crearTransaccion(requestDTO, "testuser", "pass");
-
-        assertNotNull(result);
-        verify(transaccionRepository).save(entity);
+        assertThat(resultado).isNotNull();
+        verify(transaccionRepository).save(transaccionReciente);
     }
 
     @Test
-    void crearTransaccion_conCategoria_cargaCategoriaRealYGuarda() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
+    @DisplayName("crearTransaccion: categoría no encontrada — lanza RuntimeException")
+    void crearTransaccion_categoriaNoExiste_lanzaExcepcion() {
         TransaccionRequestDTO requestDTO = new TransaccionRequestDTO();
-        requestDTO.setCantidad(100.0);
-        requestDTO.setIdCategoria(1);
+        CategoriaEntity categoria = new CategoriaEntity();
+        categoria.setId(99);
+        transaccionReciente.setCategoria(categoria);
 
-        TransaccionEntity entity = new TransaccionEntity();
-        entity.setCantidad(100.0);
-        entity.setCategoria(categoriaEntity);
+        when(transaccionMapper.convertirAEntity(requestDTO)).thenReturn(transaccionReciente);
+        when(categoriaRepository.findById(99)).thenReturn(Optional.empty());
 
-        when(transaccionMapper.convertirAEntity(requestDTO)).thenReturn(entity);
-        when(categoriaRepository.findById(1)).thenReturn(Optional.of(categoriaEntity));
-        when(transaccionRepository.save(entity)).thenReturn(entity);
-        when(transaccionMapper.convertirADTO(entity)).thenReturn(transaccionResponseDTO);
-
-        TransaccionResponseDTO result = transaccionService.crearTransaccion(requestDTO, "testuser", "pass");
-
-        assertNotNull(result);
-        verify(categoriaRepository).findById(1);
+        assertThatThrownBy(() -> transaccionService.crearTransaccion(requestDTO))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessageContaining("Categoría no encontrada");
     }
 
     @Test
-    void crearTransaccion_categoriaNoEncontrada_lanzaRuntimeException() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
+    @DisplayName("crearTransaccion: sin categoría — guarda directamente sin buscar categoría")
+    void crearTransaccion_sinCategoria_guardaSinBuscarCategoria() {
         TransaccionRequestDTO requestDTO = new TransaccionRequestDTO();
-        requestDTO.setIdCategoria(999);
+        TransaccionEntity sinCategoria = new TransaccionEntity();
+        sinCategoria.setCategoria(null);
 
-        TransaccionEntity entity = new TransaccionEntity();
-        CategoriaEntity categoriaRef = new CategoriaEntity();
-        categoriaRef.setId(999);
-        entity.setCategoria(categoriaRef);
+        when(transaccionMapper.convertirAEntity(requestDTO)).thenReturn(sinCategoria);
+        when(transaccionRepository.save(sinCategoria)).thenReturn(sinCategoria);
+        when(transaccionMapper.convertirADTO(sinCategoria)).thenReturn(transaccionDTO);
 
-        when(transaccionMapper.convertirAEntity(requestDTO)).thenReturn(entity);
-        when(categoriaRepository.findById(999)).thenReturn(Optional.empty());
+        TransaccionResponseDTO resultado = transaccionService.crearTransaccion(requestDTO);
 
-        assertThrows(RuntimeException.class,
-                () -> transaccionService.crearTransaccion(requestDTO, "testuser", "pass"));
+        assertThat(resultado).isNotNull();
+        verify(categoriaRepository, never()).findById(any());
     }
 
-    // --- editarTransaccion ---
+    // ─── editarTransaccion ────────────────────────────────────────────────────
 
     @Test
-    void editarTransaccion_reciente_actualizaYRetornaDTO() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-        TransaccionRequestDTO requestDTO = new TransaccionRequestDTO();
-        requestDTO.setCantidad(200.0);
+    @DisplayName("editarTransaccion: transacción no encontrada — lanza RuntimeException")
+    void editarTransaccion_noExiste_lanzaExcepcion() {
+        when(transaccionRepository.findById(99)).thenReturn(Optional.empty());
 
-        TransaccionEntity actualizada = new TransaccionEntity();
-        actualizada.setId(1);
-        actualizada.setCantidad(200.0);
-
-        TransaccionResponseDTO responseActualizado = new TransaccionResponseDTO();
-        responseActualizado.setId(1);
-        responseActualizado.setCantidad(200.0);
-
-        when(transaccionRepository.findById(1)).thenReturn(Optional.of(transaccionReciente));
-        when(transaccionMapper.convertirAEntity(requestDTO)).thenReturn(actualizada);
-        when(transaccionRepository.save(actualizada)).thenReturn(actualizada);
-        when(transaccionMapper.convertirADTO(actualizada)).thenReturn(responseActualizado);
-
-        TransaccionResponseDTO result = transaccionService.editarTransaccion(1, requestDTO, "testuser", "pass");
-
-        assertNotNull(result);
-        assertEquals(200.0, result.getCantidad());
+        assertThatThrownBy(() -> transaccionService.editarTransaccion(99, new TransaccionRequestDTO()))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessageContaining("Transaccion no encontrada");
     }
 
     @Test
-    void editarTransaccion_noEncontrada_lanzaRuntimeException() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-        when(transaccionRepository.findById(999)).thenReturn(Optional.empty());
-
-        assertThrows(RuntimeException.class,
-                () -> transaccionService.editarTransaccion(999, new TransaccionRequestDTO(), "testuser", "pass"));
-    }
-
-    @Test
-    void editarTransaccion_masDesTresMeses_lanzaRuntimeException() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
+    @DisplayName("editarTransaccion: más de 3 meses de antigüedad — lanza RuntimeException")
+    void editarTransaccion_muyAntigua_lanzaExcepcion() {
         when(transaccionRepository.findById(2)).thenReturn(Optional.of(transaccionAntigua));
 
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> transaccionService.editarTransaccion(2, new TransaccionRequestDTO(), "testuser", "pass"));
-        assertTrue(ex.getMessage().contains("3 meses"));
+        assertThatThrownBy(() -> transaccionService.editarTransaccion(2, new TransaccionRequestDTO()))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessageContaining("3 meses");
     }
 
-    // --- eliminarTransaccion ---
+    @Test
+    @DisplayName("editarTransaccion: reciente y existente — actualiza y devuelve DTO")
+    void editarTransaccion_recienteYExistente_actualizaYdevuelveDTO() {
+        TransaccionRequestDTO requestDTO = new TransaccionRequestDTO();
+        when(transaccionRepository.findById(1)).thenReturn(Optional.of(transaccionReciente));
+        when(transaccionMapper.convertirAEntity(requestDTO)).thenReturn(transaccionReciente);
+        when(transaccionRepository.save(transaccionReciente)).thenReturn(transaccionReciente);
+        when(transaccionMapper.convertirADTO(transaccionReciente)).thenReturn(transaccionDTO);
+
+        TransaccionResponseDTO resultado = transaccionService.editarTransaccion(1, requestDTO);
+
+        assertThat(resultado).isNotNull();
+        verify(transaccionRepository).save(transaccionReciente);
+    }
+
+    // ─── eliminarTransaccion ──────────────────────────────────────────────────
 
     @Test
-    void eliminarTransaccion_reciente_eliminaYRetornaTrue() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
+    @DisplayName("eliminarTransaccion: no existe — devuelve false")
+    void eliminarTransaccion_noExiste_devuelveFalse() {
+        when(transaccionRepository.findById(99)).thenReturn(Optional.empty());
+
+        boolean resultado = transaccionService.eliminarTransaccion(99);
+
+        assertThat(resultado).isFalse();
+        verify(transaccionRepository, never()).deleteById(any());
+    }
+
+    @Test
+    @DisplayName("eliminarTransaccion: más de 3 meses — devuelve false sin borrar")
+    void eliminarTransaccion_muyAntigua_devuelveFalse() {
+        when(transaccionRepository.findById(2)).thenReturn(Optional.of(transaccionAntigua));
+
+        boolean resultado = transaccionService.eliminarTransaccion(2);
+
+        assertThat(resultado).isFalse();
+        verify(transaccionRepository, never()).deleteById(any());
+    }
+
+    @Test
+    @DisplayName("eliminarTransaccion: reciente y existente — elimina y devuelve true")
+    void eliminarTransaccion_recienteYExistente_eliminaYdevuelveTrue() {
         when(transaccionRepository.findById(1)).thenReturn(Optional.of(transaccionReciente));
 
-        boolean result = transaccionService.eliminarTransaccion(1, "testuser", "pass");
+        boolean resultado = transaccionService.eliminarTransaccion(1);
 
-        assertTrue(result);
+        assertThat(resultado).isTrue();
         verify(transaccionRepository).deleteById(1);
     }
 
-    @Test
-    void eliminarTransaccion_noEncontrada_retornaFalse() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-        when(transaccionRepository.findById(999)).thenReturn(Optional.empty());
-
-        boolean result = transaccionService.eliminarTransaccion(999, "testuser", "pass");
-
-        assertFalse(result);
-        verify(transaccionRepository, never()).deleteById(any());
-    }
+    // ─── obtenerTendencia ─────────────────────────────────────────────────────
 
     @Test
-    void eliminarTransaccion_masDesTresMeses_retornaFalse() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-        when(transaccionRepository.findById(2)).thenReturn(Optional.of(transaccionAntigua));
-
-        boolean result = transaccionService.eliminarTransaccion(2, "testuser", "pass");
-
-        assertFalse(result);
-        verify(transaccionRepository, never()).deleteById(any());
-    }
-
-    // --- obtenerTendencia ---
-
-    @Test
-    void obtenerTendencia_ambiosMesesConDatos_calculaPorcentaje() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
+    @DisplayName("obtenerTendencia: balance anterior 0 y actual positivo — devuelve 100.0")
+    void obtenerTendencia_anteriorCeroActualPositivo_devuelve100() {
         when(transaccionRepository.obtenerBalanceEntreFechas(eq(1), any(), any()))
-                .thenReturn(1200.0)
-                .thenReturn(1000.0);
+                .thenReturn(500.0)  // mes actual
+                .thenReturn(0.0);   // mes anterior
 
-        double result = transaccionService.obtenerTendencia(1, "testuser", "pass");
+        double resultado = transaccionService.obtenerTendencia(1);
 
-        assertEquals(20.0, result, 0.01);
+        assertThat(resultado).isEqualTo(100.0);
     }
 
     @Test
-    void obtenerTendencia_mesAnteriorCero_balanceActualPositivo_retorna100() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-        when(transaccionRepository.obtenerBalanceEntreFechas(eq(1), any(), any()))
-                .thenReturn(500.0)
-                .thenReturn(0.0);
-
-        double result = transaccionService.obtenerTendencia(1, "testuser", "pass");
-
-        assertEquals(100.0, result, 0.01);
-    }
-
-    @Test
-    void obtenerTendencia_ambiosMesesSinDatos_retornaCero() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
+    @DisplayName("obtenerTendencia: ambos balances 0 — devuelve 0.0")
+    void obtenerTendencia_ambosBalancesCero_devuelveCero() {
         when(transaccionRepository.obtenerBalanceEntreFechas(eq(1), any(), any()))
                 .thenReturn(null)
                 .thenReturn(null);
 
-        double result = transaccionService.obtenerTendencia(1, "testuser", "pass");
+        double resultado = transaccionService.obtenerTendencia(1);
 
-        assertEquals(0.0, result, 0.01);
+        assertThat(resultado).isEqualTo(0.0);
     }
 
     @Test
-    void obtenerTendencia_mesAnteriorCeroBalanceActualCero_retornaCero() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
+    @DisplayName("obtenerTendencia: balance actual 150, anterior 100 — devuelve 50.0%")
+    void obtenerTendencia_calculoNormal_devuelvePorcentajeCorrecto() {
         when(transaccionRepository.obtenerBalanceEntreFechas(eq(1), any(), any()))
-                .thenReturn(0.0)
-                .thenReturn(0.0);
+                .thenReturn(150.0)
+                .thenReturn(100.0);
 
-        double result = transaccionService.obtenerTendencia(1, "testuser", "pass");
+        double resultado = transaccionService.obtenerTendencia(1);
 
-        assertEquals(0.0, result, 0.01);
-    }
-
-    // --- obtenerCategoriaPrincipal ---
-
-    @Test
-    void obtenerCategoriaPrincipal_conGastosEsteMes_retornaCategoriaYPorcentaje() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-
-        TransaccionEntity t1 = new TransaccionEntity();
-        t1.setTipoTransaccion(false);
-        t1.setCantidad(300.0);
-        t1.setFecha(LocalDateTime.now().withDayOfMonth(1).plusDays(1));
-        t1.setCategoria(categoriaEntity);
-
-        CategoriaEntity cat2 = new CategoriaEntity();
-        cat2.setNombre("Transporte");
-        TransaccionEntity t2 = new TransaccionEntity();
-        t2.setTipoTransaccion(false);
-        t2.setCantidad(100.0);
-        t2.setFecha(LocalDateTime.now().withDayOfMonth(1).plusDays(1));
-        t2.setCategoria(cat2);
-
-        when(transaccionRepository.findByUsuarioId(1)).thenReturn(Arrays.asList(t1, t2));
-
-        String[] result = transaccionService.obtenerCategoriaPrincipal(1, "testuser", "pass");
-
-        assertNotNull(result);
-        assertEquals(2, result.length);
-        assertEquals("Alimentación", result[0]);
-        assertEquals("75,00", result[1]);
+        assertThat(resultado).isEqualTo(50.0);
     }
 
     @Test
-    void obtenerCategoriaPrincipal_sinGastosEsteMes_retornaSinDatos() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
+    @DisplayName("obtenerTendencia: balance actual 50, anterior 100 — devuelve -50.0%")
+    void obtenerTendencia_balanceBaja_devuelveNegativo() {
+        when(transaccionRepository.obtenerBalanceEntreFechas(eq(1), any(), any()))
+                .thenReturn(50.0)
+                .thenReturn(100.0);
 
-        TransaccionEntity ingreso = new TransaccionEntity();
-        ingreso.setTipoTransaccion(true);
-        ingreso.setCantidad(500.0);
-        ingreso.setFecha(LocalDateTime.now());
+        double resultado = transaccionService.obtenerTendencia(1);
 
-        when(transaccionRepository.findByUsuarioId(1)).thenReturn(Arrays.asList(ingreso));
+        assertThat(resultado).isEqualTo(-50.0);
+    }
 
-        String[] result = transaccionService.obtenerCategoriaPrincipal(1, "testuser", "pass");
+    // ─── obtenerCategoriaPrincipal ────────────────────────────────────────────
 
-        assertEquals("Sin datos", result[0]);
-        assertEquals("0.0", result[1]);
+    @Test
+    @DisplayName("obtenerCategoriaPrincipal: sin gastos este mes — devuelve ['Sin datos', '0.0']")
+    void obtenerCategoriaPrincipal_sinGastos_devuelveSinDatos() {
+        // Transacción de ingreso (no cuenta como gasto)
+        transaccionReciente.setTipoTransaccion(true);
+        when(transaccionRepository.findByUsuarioId(1)).thenReturn(List.of(transaccionReciente));
+
+        String[] resultado = transaccionService.obtenerCategoriaPrincipal(1);
+
+        assertThat(resultado[0]).isEqualTo("Sin datos");
+        assertThat(resultado[1]).isEqualTo("0.0");
     }
 
     @Test
-    void obtenerCategoriaPrincipal_sinTransacciones_retornaSinDatos() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-        when(transaccionRepository.findByUsuarioId(1)).thenReturn(Collections.emptyList());
+    @DisplayName("obtenerCategoriaPrincipal: varios gastos — devuelve categoría con mayor importe")
+    void obtenerCategoriaPrincipal_variosGastos_devuelveCategoriaMayor() {
+        CategoriaEntity catOcio = new CategoriaEntity();
+        catOcio.setNombre("Ocio");
 
-        String[] result = transaccionService.obtenerCategoriaPrincipal(1, "testuser", "pass");
+        TransaccionEntity gastoOcio = new TransaccionEntity();
+        gastoOcio.setTipoTransaccion(false);
+        gastoOcio.setFecha(LocalDateTime.now()); // este mes
+        gastoOcio.setCantidad(200.0);
+        gastoOcio.setCategoria(catOcio);
 
-        assertEquals("Sin datos", result[0]);
-        assertEquals("0.0", result[1]);
+        // transaccionReciente ya es gasto de 100 en "Alimentación"
+        when(transaccionRepository.findByUsuarioId(1))
+                .thenReturn(List.of(transaccionReciente, gastoOcio));
+
+        String[] resultado = transaccionService.obtenerCategoriaPrincipal(1);
+
+        assertThat(resultado[0]).isEqualTo("Ocio");
     }
 
-    // --- obtenerMeta ---
+    // ─── obtenerMeta ─────────────────────────────────────────────────────────
 
     @Test
-    void obtenerMeta_sinObjetivo_retornaCeros() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-        when(objetivoRepository.findFirstByUsuarioIdOrderByFechaInicioDesc(1)).thenReturn(Optional.empty());
+    @DisplayName("obtenerMeta: sin objetivo — devuelve [0.0, 0.0]")
+    void obtenerMeta_sinObjetivo_devuelveCeros() {
+        when(objetivoRepository.findFirstByUsuarioIdOrderByFechaInicioDesc(1))
+                .thenReturn(Optional.empty());
 
-        double[] result = transaccionService.obtenerMeta(1, "testuser", "pass");
+        double[] resultado = transaccionService.obtenerMeta(1);
 
-        assertNotNull(result);
-        assertEquals(0.0, result[0]);
-        assertEquals(0.0, result[1]);
-    }
-
-    @Test
-    void obtenerMeta_objetivoExpirado_retornaCeros() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-        ObjetivoEntity objetivoExpirado = new ObjetivoEntity();
-        objetivoExpirado.setCantidadObjetivo(1000.0);
-        objetivoExpirado.setFechaInicio(LocalDateTime.now().minusMonths(2));
-        objetivoExpirado.setFechaFin(LocalDateTime.now().minusMonths(1));
-
-        when(objetivoRepository.findFirstByUsuarioIdOrderByFechaInicioDesc(1)).thenReturn(Optional.of(objetivoExpirado));
-
-        double[] result = transaccionService.obtenerMeta(1, "testuser", "pass");
-
-        assertEquals(0.0, result[0]);
-        assertEquals(0.0, result[1]);
+        assertThat(resultado).containsExactly(0.0, 0.0);
     }
 
     @Test
-    void obtenerMeta_objetivoVigente_calculaProgreso() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-
+    @DisplayName("obtenerMeta: objetivo caducado — devuelve [0.0, 0.0]")
+    void obtenerMeta_objetivoCaducado_devuelveCeros() {
         ObjetivoEntity objetivo = new ObjetivoEntity();
+        objetivo.setFechaFin(LocalDateTime.now().minusDays(1)); // ya caducó
         objetivo.setCantidadObjetivo(1000.0);
-        objetivo.setFechaInicio(LocalDateTime.now().withDayOfMonth(1));
-        objetivo.setFechaFin(LocalDateTime.now().plusMonths(1));
+
+        when(objetivoRepository.findFirstByUsuarioIdOrderByFechaInicioDesc(1))
+                .thenReturn(Optional.of(objetivo));
+
+        double[] resultado = transaccionService.obtenerMeta(1);
+
+        assertThat(resultado).containsExactly(0.0, 0.0);
+    }
+
+    @Test
+    @DisplayName("obtenerMeta: objetivo vigente con progreso al 50% — devuelve progreso y meta")
+    void obtenerMeta_objetivoVigente_devuelveProgresoYMeta() {
+        ObjetivoEntity objetivo = new ObjetivoEntity();
+        objetivo.setFechaFin(LocalDateTime.now().plusDays(15));
+        objetivo.setCantidadObjetivo(1000.0);
 
         TransaccionEntity ingreso = new TransaccionEntity();
         ingreso.setTipoTransaccion(true);
         ingreso.setCantidad(600.0);
-        ingreso.setFecha(LocalDateTime.now());
 
         TransaccionEntity gasto = new TransaccionEntity();
         gasto.setTipoTransaccion(false);
         gasto.setCantidad(100.0);
-        gasto.setFecha(LocalDateTime.now());
 
-        when(objetivoRepository.findFirstByUsuarioIdOrderByFechaInicioDesc(1)).thenReturn(Optional.of(objetivo));
+        when(objetivoRepository.findFirstByUsuarioIdOrderByFechaInicioDesc(1))
+                .thenReturn(Optional.of(objetivo));
         when(transaccionRepository.buscarConFiltros(eq(1), any(), any(), isNull(), isNull(), isNull(), isNull()))
-                .thenReturn(Arrays.asList(ingreso, gasto));
+                .thenReturn(List.of(ingreso, gasto));
 
-        double[] result = transaccionService.obtenerMeta(1, "testuser", "pass");
+        double[] resultado = transaccionService.obtenerMeta(1);
 
-        assertEquals(500.0, result[0], 0.01);
-        assertEquals(1000.0, result[1], 0.01);
-    }
-
-    // --- listarTodasPorUsuario ---
-
-    @Test
-    void listarTodasPorUsuario_conDatos_retornaLista() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
-        when(transaccionRepository.findByUsuarioId(1)).thenReturn(Arrays.asList(transaccionReciente));
-        when(transaccionMapper.convertirADTO(transaccionReciente)).thenReturn(transaccionResponseDTO);
-
-        List<TransaccionResponseDTO> result = transaccionService.listarTodasPorUsuario(1, "testuser", "pass");
-
-        assertNotNull(result);
-        assertEquals(1, result.size());
+        // progreso = 600 - 100 = 500; meta = 1000
+        assertThat(resultado[0]).isEqualTo(500.0);
+        assertThat(resultado[1]).isEqualTo(1000.0);
     }
 
     @Test
-    void listarTodasPorUsuario_sinDatos_retornaListaVacia() {
-        doNothing().when(loginService).verificar(anyString(), anyString());
+    @DisplayName("obtenerMeta: progreso supera la meta — porcentaje se capea al 100%")
+    void obtenerMeta_progresoSuperaMeta_porcentajeCapadoA100() {
+        ObjetivoEntity objetivo = new ObjetivoEntity();
+        objetivo.setFechaFin(LocalDateTime.now().plusDays(15));
+        objetivo.setCantidadObjetivo(100.0); // meta pequeña
+
+        TransaccionEntity ingreso = new TransaccionEntity();
+        ingreso.setTipoTransaccion(true);
+        ingreso.setCantidad(500.0); // supera la meta
+
+        when(objetivoRepository.findFirstByUsuarioIdOrderByFechaInicioDesc(1))
+                .thenReturn(Optional.of(objetivo));
+        when(transaccionRepository.buscarConFiltros(eq(1), any(), any(), isNull(), isNull(), isNull(), isNull()))
+                .thenReturn(List.of(ingreso));
+
+        double[] resultado = transaccionService.obtenerMeta(1);
+
+        // El servicio devuelve [progresoActual, cantidadMeta], no el porcentaje
+        assertThat(resultado[0]).isEqualTo(500.0);
+        assertThat(resultado[1]).isEqualTo(100.0);
+    }
+
+    // ─── listarTodasPorUsuario ────────────────────────────────────────────────
+
+    @Test
+    @DisplayName("listarTodasPorUsuario: devuelve todas las transacciones mapeadas")
+    void listarTodasPorUsuario_devuelveTodasMapeadas() {
+        when(transaccionRepository.findByUsuarioId(1)).thenReturn(List.of(transaccionReciente));
+        when(transaccionMapper.convertirADTO(transaccionReciente)).thenReturn(transaccionDTO);
+
+        List<TransaccionResponseDTO> resultado = transaccionService.listarTodasPorUsuario(1);
+
+        assertThat(resultado).hasSize(1);
+    }
+
+    @Test
+    @DisplayName("listarTodasPorUsuario: sin transacciones — devuelve lista vacía")
+    void listarTodasPorUsuario_sinTransacciones_devuelveListaVacia() {
         when(transaccionRepository.findByUsuarioId(1)).thenReturn(Collections.emptyList());
 
-        List<TransaccionResponseDTO> result = transaccionService.listarTodasPorUsuario(1, "testuser", "pass");
+        List<TransaccionResponseDTO> resultado = transaccionService.listarTodasPorUsuario(1);
 
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
+        assertThat(resultado).isEmpty();
     }
 }
